# wakezilla

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Tarpaulin.toml  build.rs  flake.nix  machines.json
.github/workflows/: ci.yml  release.yml
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: api.rs  main.rs  models.rs
frontend/style/: main.css
modules/wakezilla/: default.nix
pkgs/wakezilla/: default.nix
rpi-system/: .sops.yaml.example  flake.nix
rpi-system/keys/: ssh_host_ed25519_key.pub
rpi-system/secrets/: secrets.yaml  secrets.yaml.example
scripts/: create-release.sh  generate-host-keys.sh
src/: client_server.rs  config.rs  connection_pool.rs  forward.rs  lib.rs  main.rs  proxy_server.rs  scanner.rs  system.rs  test_support.rs  web.rs  wol.rs
templates/: machine_detail.html  machines.html
tests/: config_tests.rs  connection_pool_tests.rs  forward_tests.rs  proxy_integration.rs  scanner_tests.rs  web_api_integration.rs  web_persistence.rs
