[package]
name = "wakezilla"
version = "0.1.1"
edition = "2021"


[dependencies]
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "sync", "net", "time", "io-util"] }
serde_json = "1.0"
askama = "0.12"
askama_axum = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ipnetwork = "0.20.0"
pnet = "0.34.0"
dns-lookup = "2.0.4"
futures-util = "0.3"
reqwest = "0.12.23"
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.2"
once_cell = "1.19.0"
